--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -8,6 +8,10 @@
   width: 1280px;
 }
 
+.header__signup {
+  background-color: #FAFAFA;
+}
+
 @media screen and (max-width: 1279px) {
   .header {
     width: 100vw;
@@ -48,7 +52,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #2be080;
+  color: #000000;
   text-decoration: none;
 }
 
@@ -58,7 +62,7 @@
 }
 
 .header__gray {
-  background: #202020;
+  background: #FAFAFA;
 }
 
 .header__button-green {
@@ -71,8 +75,6 @@
 .header__account-button {
   width: 100px;
   height: 32px;
-  background: #202020;
-  box-shadow: 0px 3px 14px rgba(0, 0, 0, 0.08);
   border-radius: 40px;
   cursor: pointer;
 }
@@ -81,7 +83,6 @@
   object-fit: cover;
   width: 100px;
   height: 32px;
-  padding-top: 4px;
 }
 
 .header__account-button:hover {
@@ -89,7 +90,7 @@
 }
 
 .header__menu-button {
-  background-color: #fff;
+  background-color: #fafafa;
   border: none;
   width: 44px;
   height: 44px;
