--- a/frontend/src/components/MoviesCard/MoviesCard.css
+++ b/frontend/src/components/MoviesCard/MoviesCard.css
@@ -1,10 +1,8 @@
 .card {
-  background: #222222;
-  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
-  border-radius: 6px;
+  background: #fff;
+  box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
   max-width: 100%;
-  height: 281px;
-  transition: 0.9s ease-in-out;
 }
 
 .card:hover {
@@ -12,14 +10,13 @@
 }
 
 .card__image {
- /* background-image: url(../../images/tatiavatar.jpg);*/
   object-fit: cover;
   background-size: cover;
   width: 100%;
-  height: 203px;
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-  transition: 0.8s ease-in-out;
+  height: 151px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  aspect-ratio: 16 / 9;
 }
 
 .card__image:hover {
@@ -29,9 +26,10 @@
 .card__container {
   display: flex;
   justify-content: space-between;
-  padding: 14px 15px;
-  border-bottom-left-radius: 6px;
-  border-bottom-right-radius: 6px;
+  padding: 14px 10px 14px 12px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background: #fff;
 }
 
 .card__title {
@@ -39,12 +37,12 @@
   font-weight: 500;
   font-size: 13px;
   line-height: 16px;
-  color: #FFF;
+  color: #000;
 }
 
 .card__time {
   display: flex;
-  margin-top: 16px;
+  margin-top: 10px;
   font-weight: 400;
   font-size: 11px;
   line-height: 13px;
@@ -53,7 +51,7 @@
 }
 
 .card__delete-button {
-  background-image: url(../../images/delete-button.svg);
+  background-image: url(../../images/buttonDelete.svg);
   width: 16px;
   height: 16px;
   border: none;
@@ -64,10 +62,9 @@
 }
 
 .card__like-button {
-  margin-right: 6px;
-  background-image: url("../../images/like.svg");
-  width: 14px;
-  height: 12px;
+  background-image: url("../../images/buttonWHITE.svg");
+  width: 24px;
+  height: 23px;
   border: none;
   background-position: center;
   background-repeat: no-repeat;
@@ -76,7 +73,7 @@
 }
 
 .card__like-button_active {
-  background-image: url(../../images/like-active.svg);
+  background-image: url(../../images/buttonGREEN.svg);
 }
 
 .card__delete-button:hover {
@@ -84,9 +81,6 @@
 }
 
 @media screen and (max-width: 1023px) {
-  .card {
-    height: 262px;
-  }
   .card__container {
     padding: 11px 15px;
   }
@@ -97,12 +91,11 @@
 
 @media screen and (max-width: 767px) {
   .card {
-    height: 233px;
+    min-height: 258px;
+    max-width: 339px;
   }
 
-
-
-  .card__image {
+  /* .card__image {
     height: 168px;
   }
 
@@ -115,5 +108,17 @@
     margin-top: 13px;
     font-size: 10px;
     line-height: 12px;
+  } */
+}
+@media screen and (max-width: 720px) {
+  .movies-card__card {
+    min-height: 236px;
+    min-width: 300px
+  }
+}
+
+@media screen and (max-width: 719px) {
+  .movies-card__image {
+    max-height: 168px;
   }
 }
