--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -21,7 +21,7 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background: #202020;
+    background: #FAFAFA;
     justify-content: space-between;
     position: relative;
     align-items: center;
@@ -62,26 +62,35 @@
     font-size: 18px;
     line-height: 22px;
     text-align: center;
-    color: #fff;
+    color: #000;
     width: max-content;
     border-bottom: 2px solid transparent;
-  }
-
-  .navigation__link_active {
-    color: #2be080;
   }
 
   .navigation__link:hover {
     border-bottom: 2px solid #fff;
   }
 
+  .navigation__link_active {
+    text-decoration: none;
+    border-bottom: #000000 2px solid;
+    padding-bottom: 5px;
+    color: #000;
+  }
+
   .navigation__account-button {
     width: 100px;
     height: 32px;
-    background: #202020;
-    box-shadow: 0px 3px 14px rgba(0, 0, 0, 0.08);
+    background: #FAFAFA;
     border-radius: 40px;
     cursor: pointer;
+  }
+  
+  .navigation__image {
+    border-style: none;
+    position: relative;
+    right: 0;
+    top: 0;
   }
 
   .navigation__account-button:hover {
